# cpp_oop_excercises

./: .gitignore  bitbucket-pipelines.yml  index.ipynb
01_platform/: index.ipynb
01_platform/01_cmake/: index.ipynb
01_platform/02_variables_and_prints/: index.ipynb
01_platform/03_clion/: index.ipynb
01_platform/04_tests/: index.ipynb
01_platform/04_tests/project/: CMakeLists.txt
01_platform/04_tests/project/include/: Calculator.h
01_platform/04_tests/project/src/: Calculator.cpp  main.cpp
01_platform/04_tests/project/tests/: CMakeLists.txt
01_platform/04_tests/project/tests/src/: CalculatorTest.cpp
02_tdd/: index.ipynb
02_tdd/01_tutorial/: index.ipynb
02_tdd/02_exercise/: index.ipynb
02_tdd/02_exercise/project/: CMakeLists.txt
02_tdd/02_exercise/project/include/: RingBuffer.h  TextWrap.h
02_tdd/02_exercise/project/src/: RingBuffer.cpp  TextWrap.cpp  main.cpp
02_tdd/02_exercise/project/tests/: CMakeLists.txt
02_tdd/02_exercise/project/tests/src/: RingBufferTest.cpp  TextWrapTest.cpp
03_stl_containers/: index.ipynb
03_stl_containers/01_tutorial/: index.ipynb
03_stl_containers/02_exercise/: index.ipynb
03_stl_containers/02_exercise/project/: CMakeLists.txt
03_stl_containers/02_exercise/project/include/: Calculator.h
03_stl_containers/02_exercise/project/src/: main.cpp
03_stl_containers/02_exercise/project/tests/: CMakeLists.txt
03_stl_containers/02_exercise/project/tests/src/: AssociativeContainersTest.cpp  CalculatorTest.cpp  SequentialContainersTest.cpp
04_stl_benchmark/: index.ipynb
04_stl_benchmark/project/: CMakeLists.txt  readme.md
04_stl_benchmark/project/benchmarks/: CMakeLists.txt
04_stl_benchmark/project/benchmarks/include/: BenchIncludes.h
04_stl_benchmark/project/benchmarks/src/: DummyBench.cpp  ExampleBench.cpp  LargeBench.cpp  MediumBench.cpp  PauseAndResumeBench.cpp  SmallBench.cpp
04_stl_benchmark/project/include/: Dummy.h  Large.h  Medium.h  Small.h
04_stl_benchmark/project/src/: Dummy.cpp  main.cpp
04_stl_benchmark/project/tests/: CMakeLists.txt
04_stl_benchmark/project/tests/src/: DummyTest.cpp  LargeTest.cpp  MediumTest.cpp  SmallTest.cpp
05_design_patterns/: index.ipynb
05_design_patterns/01_tutorial/: index.ipynb
05_design_patterns/02_exercise/: index.ipynb
05_design_patterns/02_exercise/project/: CMakeLists.txt
05_design_patterns/02_exercise/project/include/factory/executor/: AcousticCpuCore.h  AcousticCudaCore.h  AnisotropicCpuCore.h  AnisotropicCudaCore.h  Core.h  CoreFactory.h  CpuCoreFactory.h  CudaCoreFactory.h  Demo.h  ElasticCpuCore.h  ElasticCudaCore.h
05_design_patterns/02_exercise/project/include/factory/gui/: ButtonGnomeWidget.h  ButtonKdeWidget.h  CheckBoxGnomeWidget.h  CheckBoxKdeWidget.h  Demo.h  GnomeWidgetFactory.h  KdeWidgetFactory.h  ListGnomeWidget.h  ListKdeWidget.h  Widget.h  WidgetFactory.h
05_design_patterns/02_exercise/project/include/observer/: Acceleration.h  Displacement.h  Observable.h  Observer.h  Speed.h
05_design_patterns/02_exercise/project/src/: Calculator.cpp  main.cpp
05_design_patterns/02_exercise/project/src/factory/executor/: AcousticCpuCore.cpp  AcousticCudaCore.cpp  AnisotropicCpuCore.cpp  AnisotropicCudaCore.cpp  CpuCoreFactory.cpp  CudaCoreFactory.cpp  Demo.cpp  ElasticCpuCore.cpp  ElasticCudaCore.cpp
05_design_patterns/02_exercise/project/src/factory/gui/: ButtonGnomeWidget.cpp  ButtonKdeWidget.cpp  CheckBoxGnomeWidget.cpp  CheckBoxKdeWidget.cpp  Demo.cpp  GnomeWidgetFactory.cpp  KdeWidgetFactory.cpp  ListGnomeWidget.cpp  ListKdeWidget.cpp
05_design_patterns/02_exercise/project/src/observer/: Acceleration.cpp  Displacement.cpp  Observable.cpp  Speed.cpp
05_design_patterns/02_exercise/project/tests/: CMakeLists.txt
05_design_patterns/02_exercise/project/tests/src/: ObserverTest.cpp
06_fake_mock_or_stub/: index.ipynb
06_fake_mock_or_stub/01_tutorial/: index.ipynb
06_fake_mock_or_stub/02_exercise/: index.ipynb
06_fake_mock_or_stub/02_exercise/project/: CMakeLists.txt
06_fake_mock_or_stub/02_exercise/project/include/: Observer.h  ObserverImpl.h  Point.h  Space.h  SpaceImpl.h  Time.h  TimeImpl.h  Universe.h
06_fake_mock_or_stub/02_exercise/project/src/: Observer.cpp  ObserverImpl.cpp  Space.cpp  SpaceImpl.cpp  Time.cpp  TimeImpl.cpp  Universe.cpp  main.cpp
06_fake_mock_or_stub/02_exercise/project/tests/: CMakeLists.txt
06_fake_mock_or_stub/02_exercise/project/tests/include/: ObserverMock.h  SpaceMock.h  TestIncludes.h  TimeMock.h
06_fake_mock_or_stub/02_exercise/project/tests/src/: UniverseTest.cpp
07_qt/: index.ipynb
07_qt/01_tutorial/: index.ipynb
07_qt/02_exercise/: index.ipynb
07_qt/02_exercise/project/: project.pro
07_qt/02_exercise/project/cli/: cli.pro  main.cpp
07_qt/02_exercise/project/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
07_qt/02_exercise/project/tests/: tests.pro
07_qt/02_exercise/project/tests/acceleration/: tst_accelerationtest.cpp
07_qt/02_exercise/project/tests/displacement/: tst_displacementtest.cpp
07_qt/02_exercise/project/tests/speed/: tst_speedtest.cpp
07_qt/02_exercise/project/utils/: acceleration.cpp  acceleration.h  displacement.cpp  displacement.h  speed.cpp  speed.h  utils.cpp  utils.h
08_qt_state_machine/: index.ipynb
08_qt_state_machine/project/: mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  project.pro
